Fix text alignment

--- a/static/css/training.css
+++ b/static/css/training.css
@@ -29,8 +29,21 @@
 #comparison_details tr {
 }
 
-#comparison_details td {
+#comparison_details th {
+    text-align: left;
+}
+
+#comparison_details td, th {
     padding: 10px;
+}
+
+#comparison_details th {
+    background: -webkit-gradient(
+        linear, 0% 100%, 0% 0%,
+        color-stop(0.35, #EBEBEB),
+        color-stop(0.5, #F0F0F0)
+    );
+    border-bottom: #999;
 }
 
 #comparison_details .totals {
